# miniDDPM

./: .gitignore  README.md  ddpm.ipynb  main.py
apps/imgDDIM/: README.md  ddim.py  formulation.ipynb  main_interpolate.py  main_inversion.py  main_sampling.py
apps/imgDDPM/: README.md  ddpm.py  mnist.py  pyproject.toml  train_mnist.py  unet.py  utils.py
notes/: bugs.md
